# caneo

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  caneo.yaml  conanfile.py  conanfile.txt  example_model.lua  main.cpp
caneo/inc/: constant.h  dbc.h  message.h  signal.h  wave_message.h  wave_pattern.h
caneo/src/: constant.cpp  dbc.cpp  message.cpp  signal.cpp  wave_message.cpp  wave_pattern.cpp
dbc/: vcan0.dbc
doc/: .$caneo_class_diagramm.drawio.bkp  .$caneo_class_diagramm.drawio.dtmp  caneo_class_diagramm.drawio
docs/: architecture.md
src/: main.cpp
src/action/: Action.cpp  Action.hpp  ActionHandler.cpp  ActionHandler.hpp
src/compat/: print.hpp
src/config/: Config.cpp  Config.hpp
src/decoder/: DbcPppWrapper.cpp  DbcPppWrapper.hpp  Decoder.hpp  DecoderRegistry.cpp  DecoderRegistry.hpp
src/frame/: CanFrame.cpp  CanFrame.hpp  DataFrame.cpp  DataFrame.hpp  DataFrameSet.cpp  DataFrameSet.hpp
src/gui/: GuiDataFrameSet.hpp  TuiDataFrameSet.cpp  TuiDataFrameSet.hpp
src/logger/: Logger.hpp  McapLogger.cpp  McapLogger.hpp  McapReader.cpp  McapReader.hpp
src/model/: ModelEngine.cpp  ModelEngine.hpp  SignalStore.cpp  SignalStore.hpp
src/proto/: ProtoLog.cpp  ProtoLog.hpp  ProtoLogRegistry.cpp  ProtoLogRegistry.hpp
src/send/: SendModel.cpp  SendModel.hpp
src/setup/: InterfaceSetup.cpp  InterfaceSetup.hpp
src/socket/: Socket.cpp  Socket.hpp  SocketCAN.cpp  SocketCAN.hpp
